Quiz API developing

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
       </ul>
     </nav>
 
-    <div style="padding-left: 40px; padding-right: 40px">
-      <h1 id="quiz-api" style="margin-top: 100px">Quiz API</h1>
+    <div style="padding-left: 40px; padding-right: 40px;margin-top: 150px">
+      <h1 id="quiz-api">Quiz API</h1>
       <p>
         Quiz API is a REST API that stores quiz questions and answers in JSON
         format.
