Quiz API developing

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <nav class="navbar">
       <ul>
         <li><a href="#quiz-api">Quiz API</a></li>
+        <li><a href="#deployed-on-heroku">Deployed on Heroku</a></li>
         <li><a href="#quiz-json">Quiz JSON</a></li>
         <li><a href="#quiz-api-endpoints">Quiz API Endpoints</a></li>
         <li><a href="#get-quiz">GET /quiz</a></li>
@@ -137,7 +138,7 @@
       </ul>
     </nav>
 
-    <div style="padding-left: 40px; padding-right: 40px;margin-top: 150px">
+    <div style="padding-left: 40px; padding-right: 40px; margin-top: 150px">
       <h1 id="quiz-api">Quiz API</h1>
       <p>
         Quiz API is a REST API that stores quiz questions and answers in JSON
@@ -154,6 +155,12 @@
           or four options. and one of the options is the correct answer.
         </li>
       </ul>
+
+      <h2 id="deployed-on-heroku">Deployed on Heroku</h2>
+      <p>
+        <a href="https://nodemysqlcrud.herokuapp.com/quiz">Quiz API</a>
+        is deployed on Heroku.
+      </p>
 
       <h2 id="quiz-json">Quiz JSON</h2>
       <p>Quiz JSON is a JSON object that stores quiz questions and answers.</p>
