Quiz API developing

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <nav class="navbar">
       <ul>
         <li><a href="#quiz-api">Quiz API</a></li>
+        <li><a href="#postmanlinktesting">Testing on Postman</a></li>
         <li><a href="#deployed-on-heroku">Deployed on Heroku</a></li>
         <li><a href="#quiz-json">Quiz JSON</a></li>
         <li><a href="#quiz-api-endpoints">Quiz API Endpoints</a></li>
@@ -155,6 +156,12 @@
           or four options. and one of the options is the correct answer.
         </li>
       </ul>
+
+      <h2 id="postmanlinktesting">Testing on Postman</h2>
+        <p>
+            You can test the Quiz API on
+            <a href="https://www.postman.com/lunar-space-683154/workspace/apitest/collection/26009791-bad2866e-05e2-4bf2-8ee3-ff1554025840?action=share&creator=26009791">Postman</a>.
+        </p>
 
       <h2 id="deployed-on-heroku">Deployed on Heroku</h2>
       <p>
@@ -215,11 +222,21 @@
       <h2 id="quiz-api-endpoints">Quiz API Endpoints</h2>
       <p>Quiz API has the following endpoints:</p>
       <ul>
-        <li>GET /quiz</li>
-        <li>POST /quiz</li>
-        <li>GET /quiz/:id</li>
-        <li>PUT /quiz/:id</li>
-        <li>DELETE /quiz/:id</li>
+        <li>GET /quiz
+            <a href="https://nodemysqlcrud.herokuapp.com/quiz">https://nodemysqlcrud.herokuapp.com/quiz</a>
+        </li>
+        <li>POST /quiz
+            <a href="https://nodemysqlcrud.herokuapp.com/quiz">https://nodemysqlcrud.herokuapp.com/quiz</a>
+        </li>
+        <li>GET /quiz/:id
+            <a href="https://nodemysqlcrud.herokuapp.com/quiz/1">https://nodemysqlcrud.herokuapp.com/quiz/1</a>
+        </li>
+        <li>PUT /quiz/:id
+            <a href="https://nodemysqlcrud.herokuapp.com/quiz/1">https://nodemysqlcrud.herokuapp.com/quiz/1</a>
+        </li>
+        <li>DELETE /quiz/:id
+            <a href="https://nodemysqlcrud.herokuapp.com/quiz/1">https://nodemysqlcrud.herokuapp.com/quiz/1</a>
+        </li>  
       </ul>
 
       <h2 id="get-quiz">GET /quiz</h2>
@@ -515,7 +532,11 @@
     </div>
 
     <footer>
-      <p>Quiz API is developed by Muhammad Bilal</p>
+      <p>Quiz API is developed by 
+        <a href="https://github.com/Muhammad-Bilal-7896/">
+            Muhammad Bilal
+        </a>
+      </p>
       <p>
         For any questions, please contact me at
         <a href="mailto:bilalmohib7896@gmail.com"> bilalmohib7896@gmail.com </a>
