Quiz API developing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,76 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="
+      Quiz
+      API
+      is
+      a
+      REST
+      API
+      that
+      stores
+      quiz
+      questions
+      and
+      answers
+      in
+      JSON
+      format.
+      One
+      of
+      the
+      options
+      is
+      the
+      correct
+      answer.
+      The
+      user
+      will
+      select
+      the
+      correct
+      answer
+      and
+      the
+      app
+      will
+      check
+      if
+      the
+      answer
+      is
+      correct.
+      The
+      Quiz
+      JSON
+      have
+      a
+      question
+      property
+      and
+      options
+      can
+      be
+      two,
+      three
+      or
+      four
+      options.
+      and
+      one
+      of
+      the
+      options
+      is
+      the
+      correct
+      answer.
+      "
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/vs2015.min.css"
